create compressed runtime image