@@ -19,5 +19,8 @@ java --module-path C:\javafx-sdk-11\lib;build\HelloWorld.jar -m hellomodule/com.
 // create custom jre containing only the required modules
 jlink --module-path "%JAVA_HOME%\jmods;C:\javafx-jmods-11;build\hellomodule" --add-modules hellomodule --launcher start=hellomodule/com.ameus.Main --output dist
 
+// create another jre (compressed, smaller, suitable for production)
+jlink --module-path "%JAVA_HOME%\jmods;C:\javafx-jmods-11;build\hellomodule" --add-modules hellomodule --launcher start=hellomodule/com.ameus.Main --output dist-compressed --compress 2 --no-header-files --no-man-pages --strip-debug
+
 // run with the new jre using the launcher script we created in previous command
 dist\bin\start
